--- a/quanlydatphongkhachsan/fGiaoDienChinh.resx
+++ b/quanlydatphongkhachsan/fGiaoDienChinh.resx
@@ -129,4 +129,7 @@
   <metadata name="dONDATPHONGTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>630, 17</value>
   </metadata>
+  <metadata name="quanlydatphongkhachsaN1DataSet1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>846, 17</value>
+  </metadata>
 </root>
