--- a/quanlydatphongkhachsan/Properties/Resources.resx
+++ b/quanlydatphongkhachsan/Properties/Resources.resx
@@ -121,4 +121,16 @@
   <data name="hotel-novotel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hotel-novotel.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="novotel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\novotel1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="login1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\login1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ĐĂNG NHẬP" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ĐĂNG NHẬP.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
